# omniai-core

./: .env.example  .env.test  .env.test.docker  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose-test.yml  docker-compose.yml  practice.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: start.sh
src/omniai/: main.py
src/omniai/api/: health.py
src/omniai/api/v1/: agriculture.py  auth.py  authy.py  health.py  me.py  schemas.py
src/omniai/core/: config.py  jwt.py  logging.py  logging_middleware.py  middleware.py
src/omniai/db/: __init__.py  session.py
src/omniai/models/: __init__.py  base.py  organization.py  user.py
src/omniai/services/: auth.py  organization.py
tests/unit/: conftest.py  conftest.py # not used  test_auth.py  test_tenant_middleware.py
